# dl-examples

./: .gitignore  README.md  pyproject.toml  requirements.txt
dl_examples/: lenet.ipynb  lenet.py
dl_examples/args/: __init__.py  lenet_args.py
dl_examples/cv/: header.txt  lenet.py
dl_examples/cv/alexnet/: alexnet_keras.py  common.py  train.py
dl_examples/cv/lenet/: lenet_pytorch.py
dl_examples/cv/run/: events.out.tfevents.1687826108.nsynovic.46684.0
dl_examples/datasetLoaders/: mnist.py
dl_examples/utils/: metrics.py  tensorboard.py
