[tool.poetry]
name = "dl-examples"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
packages = [{include = "dl_examples"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
