[tool.poetry]
name = "dl-examples"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
packages = [{include = "dl_examples"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyterlab = "^3.6.3"
tensorflow = "^2.12.0"
jupyter-contrib-nbextensions = "^0.7.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = {extras = ["jupyter"], version = "^23.3.0"}
jupyter-black = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
use_parentheses=true
