[tool.poetry]
name = "dl-examples"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
packages = [{include = "dl_examples"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jax = "^0.4.13"
flax = "^0.6.11"
jaxlib = "^0.4.13"
optax = "^0.1.5"
tensorflow = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
